# png-debloat

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
include/: cli_args.h  crc.h  logging.h  pngparser.h
py/: bindings.cpp
src/: cli_args.cpp  main.cpp  pngparser.cpp
tests/py/: unit_test.py
